@@ -1,3 +1,4 @@
+ - Allow a variable number of smoothings
  - Add class Table for pretty-printing of tables
  - Add experimental MTL4 linear algebra backend
  - Add OutflowFacet to SpecialFunctions for DG transport problems
